core/bench/benchwithzlink/baseline/zlink_dist/linux-x64/include/zlink.h

/**
 * @brief Return the errno for the current thread.
 * @return errno value (POSIX errno or ZLINK_HAUSNUMERO-based extended code).
 */
ZLINK_EXPORT int zlink_errno (void);
/**
 * @brief Return a human-readable string for the given error number.
 * @param errnum_  Error number (e.g. return value of zlink_errno()).
 * @return Static string pointer. Must not be modified or freed.
 */
ZLINK_EXPORT const char *zlink_strerror (int errnum_);
/**
 * @brief Return the runtime library version.
 * @param[out] major_  Major version.
 * @param[out] minor_  Minor version.
 * @param[out] patch_  Patch version.
 */
ZLINK_EXPORT void zlink_version (int *major_, int *minor_, int *patch_);
/**
 * @brief Create a new zlink context.
 *
 * A context manages I/O threads and serves as the foundation for
 * creating sockets. Must be released with zlink_ctx_term().
 *
 * @return Context handle, or NULL on failure (errno is set).
 */
ZLINK_EXPORT void *zlink_ctx_new (void);
/**
 * @brief Terminate the context and release all resources.
 *
 * May block until all sockets are closed.
 *
 * @param context_  Context handle.
 * @return 0 on success, -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_ctx_term (void *context_);
/**
 * @brief Shut down the context immediately.
 *
 * Interrupts any blocking calls with ETERM.
 * zlink_ctx_term() must still be called for final cleanup.
 *
 * @param context_  Context handle.
 * @return 0 on success, -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_ctx_shutdown (void *context_);
/**
 * @brief Set a context option.
 * @param context_  Context handle.
 * @param option_   Option name (ZLINK_IO_THREADS, ZLINK_MAX_SOCKETS, etc.).
 * @param optval_   Option value.
 * @return 0 on success, -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_ctx_set (void *context_, int option_, int optval_);
/**
 * @brief Get a context option.
 * @param context_  Context handle.
 * @param option_   Option name.
 * @return Option value, or -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_ctx_get (void *context_, int option_);
/******************************************************************************/
/*  0MQ message definition.                                                   */
/******************************************************************************/
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    uint8_t data[255];
} zlink_routing_id_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
/** @brief Initialize an empty message. Must be closed with zlink_msg_close(). */
ZLINK_EXPORT int zlink_msg_init (zlink_msg_t *msg_);
/** @brief Initialize a message of the given size. */
ZLINK_EXPORT int zlink_msg_init_size (zlink_msg_t *msg_, size_t size_);
/**
 * @brief Initialize a message from an external data buffer (zero-copy).
 * @param msg_   Message object.
 * @param data_  External data buffer.
 * @param size_  Data size in bytes.
 * @param ffn_   Callback invoked when the message is released. May be NULL.
 * @param hint_  User data passed to @p ffn_.
 */
ZLINK_EXPORT int zlink_msg_init_data (
  zlink_msg_t *msg_, void *data_, size_t size_, zlink_free_fn *ffn_, void *hint_);
/** @brief Send a message on a socket. On success, ownership is transferred. */
ZLINK_EXPORT int zlink_msg_send (zlink_msg_t *msg_, void *s_, int flags_);
/** @brief Receive a message from a socket. */
ZLINK_EXPORT int zlink_msg_recv (zlink_msg_t *msg_, void *s_, int flags_);
/** @brief Release message resources. Must be called after init. */
ZLINK_EXPORT int zlink_msg_close (zlink_msg_t *msg_);
/** @brief Move message content from src_ to dest_. src_ becomes empty. */
ZLINK_EXPORT int zlink_msg_move (zlink_msg_t *dest_, zlink_msg_t *src_);
/** @brief Copy a message from src_ to dest_. */
ZLINK_EXPORT int zlink_msg_copy (zlink_msg_t *dest_, zlink_msg_t *src_);
/** @brief Return a pointer to the message data buffer. */
ZLINK_EXPORT void *zlink_msg_data (zlink_msg_t *msg_);
/** @brief Return the message data size in bytes. */
ZLINK_EXPORT size_t zlink_msg_size (const zlink_msg_t *msg_);
/** @brief Return 1 if more parts follow in a multipart message. */
ZLINK_EXPORT int zlink_msg_more (const zlink_msg_t *msg_);
/** @brief Get an integer message property. */
ZLINK_EXPORT int zlink_msg_get (const zlink_msg_t *msg_, int property_);
/** @brief Set an integer message property. */
ZLINK_EXPORT int zlink_msg_set (zlink_msg_t *msg_, int property_, int optval_);
/** @brief Get a string message property (e.g. metadata). */
ZLINK_EXPORT const char *zlink_msg_gets (const zlink_msg_t *msg_,
                                     const char *property_);
/**
 * @brief Create a socket.
 * @param context_  Context handle (return value of zlink_ctx_new()).
 * @param type_     Socket type (ZLINK_PAIR, ZLINK_PUB, ZLINK_SUB, etc.).
 * @return Socket handle, or NULL on failure (errno is set).
 */
ZLINK_EXPORT void *zlink_socket (void *, int type_);
/** @brief Close a socket and release its resources. */
ZLINK_EXPORT int zlink_close (void *s_);
/**
 * @brief Set a socket option.
 * @param s_         Socket handle.
 * @param option_    Option name (ZLINK_SNDHWM, ZLINK_RCVHWM, ZLINK_LINGER, etc.).
 * @param optval_    Option value buffer.
 * @param optvallen_ Option value size in bytes.
 */
ZLINK_EXPORT int
zlink_setsockopt (void *s_, int option_, const void *optval_, size_t optvallen_);
/** @brief Get a socket option. */
ZLINK_EXPORT int
zlink_getsockopt (void *s_, int option_, void *optval_, size_t *optvallen_);
/**
 * @brief Bind a socket to an address.
 * @param addr_  Endpoint (e.g. @c tcp://host:5555, @c inproc://name).
 */
ZLINK_EXPORT int zlink_bind (void *s_, const char *addr_);
/** @brief Connect a socket to a remote address. */
ZLINK_EXPORT int zlink_connect (void *s_, const char *addr_);
/** @brief Unbind a socket from an address. */
ZLINK_EXPORT int zlink_unbind (void *s_, const char *addr_);
/** @brief Disconnect a socket from a remote address. */
ZLINK_EXPORT int zlink_disconnect (void *s_, const char *addr_);
/**
 * @brief Send buffer data on a socket.
 * @param flags_  0, ZLINK_DONTWAIT, ZLINK_SNDMORE, or a combination.
 * @return Number of bytes sent, or -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_send (void *s_, const void *buf_, size_t len_, int flags_);
/** @brief Send constant data on a socket (zero-copy hint). */
ZLINK_EXPORT int
zlink_send_const (void *s_, const void *buf_, size_t len_, int flags_);
/**
 * @brief Receive data from a socket.
 * @param buf_   Receive buffer.
 * @param len_   Maximum buffer size.
 * @param flags_ 0 or ZLINK_DONTWAIT.
 * @return Number of bytes received, or -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_recv (void *s_, void *buf_, size_t len_, int flags_);
/**
 * @brief Detach STREAM callback dispatch from a socket.
 *
 * @param s_ STREAM socket.
 * @return 0 on success, -1 on failure (errno is set).
 */
ZLINK_EXPORT int zlink_stream_detach (void *s_);
/**
 * @brief Send STREAM payload to a specific peer by routing id.
 *
 * Sends routing id as the first STREAM frame and payload as the second frame.
 * If dispatcher was attached in LEN32BE mode for this socket, payload is framed
 * as 4-byte big-endian length + payload before sending.
 *
 * @param s_    STREAM socket.
 * @param rid_  Target peer routing id.
 * @param data_ Payload data buffer (may be NULL when size_ == 0).
 * @param size_ Payload size in bytes.
 * @param flags_ Send flags (0 or ZLINK_DONTWAIT).
 * @return Number of payload bytes accepted (size_), or -1 on failure.
 */
ZLINK_EXPORT int zlink_stream_send (void *s_,
                                    const zlink_routing_id_t *rid_,
                                    const void *data_,
                                    size_t size_,
                                    int flags_);
/**
 * @brief Send STREAM payload message to a specific peer by routing id.
 *
 * This API consumes @p msg_ and reinitializes it before returning.
 * If dispatcher was attached in LEN32BE mode for this socket, payload is framed
 * as 4-byte big-endian length + payload before sending.
 *
 * @param s_    STREAM socket.
 * @param rid_  Target peer routing id.
 * @param msg_  Payload message to send (consumed by this call).
 * @param flags_ Send flags (0 or ZLINK_DONTWAIT).
 * @return Number of payload bytes accepted, or -1 on failure.
 */
ZLINK_EXPORT int zlink_stream_send_msg (void *s_,
                                        const zlink_routing_id_t *rid_,
                                        zlink_msg_t *msg_,
                                        int flags_);
/**
 * @brief Start a socket monitor via an inproc address (legacy).
 * @param addr_    Monitor inproc endpoint.
 * @param events_  Event bitmask (combination of ZLINK_EVENT_* flags).
 */
ZLINK_EXPORT int zlink_socket_monitor (void *s_, const char *addr_, int events_);
/**
 * @brief Open and return a socket monitor handle directly.
 * @param events_  Event bitmask.
 * @return Monitor handle, or NULL on failure.
 */
ZLINK_EXPORT void *zlink_socket_monitor_open (void *s_, int events_);
typedef struct {
    uint64_t event;
    uint64_t value;
    zlink_routing_id_t routing_id;
    char local_addr[256];
    char remote_addr[256];
} zlink_monitor_event_t;
/**
 * @brief Receive an event from a monitor handle.
 * @param monitor_socket_  Monitor handle (from zlink_socket_monitor_open()).
 * @param[out] event_      Event structure.
 * @param flags_           0 or ZLINK_DONTWAIT.
 */
ZLINK_EXPORT int zlink_monitor_recv (void *monitor_socket_,
                                 zlink_monitor_event_t *event_,
                                 int flags_);
typedef struct {
    zlink_routing_id_t routing_id;
    char remote_addr[256];
    uint64_t connected_time;
    uint64_t msgs_sent;
    uint64_t msgs_received;
} zlink_peer_info_t;
/** @brief Get peer info by routing_id. */
ZLINK_EXPORT int zlink_socket_peer_info (void *socket_,
                                     const zlink_routing_id_t *routing_id_,
                                     zlink_peer_info_t *info_);
/** @brief Get a peer's routing_id by index. */
ZLINK_EXPORT int zlink_socket_peer_routing_id (void *socket_,
                                           int index_,
                                           zlink_routing_id_t *out_);
/** @brief Return the number of connected peers. */
ZLINK_EXPORT int zlink_socket_peer_count (void *socket_);
/** @brief Get info for all connected peers as an array. */
ZLINK_EXPORT int zlink_socket_peers (void *socket_,
                                 zlink_peer_info_t *peers_,
                                 size_t *count_);
/* Registry ----------------------------------------------------------------- */

/**
 * @brief Create a service registry.
 *
 * A registry accepts service registration/deregistration/heartbeat
 * requests and periodically broadcasts the service list.
 *
 * @param ctx  Context handle.
 * @return Registry handle, or NULL on failure.
 */
ZLINK_EXPORT void *zlink_registry_new (void *ctx);
/**
 * @brief Set the registry PUB and ROUTER endpoints.
 * @param pub_endpoint     PUB endpoint for broadcasting.
 * @param router_endpoint  ROUTER endpoint for receiving registrations.
 */
ZLINK_EXPORT int zlink_registry_set_endpoints (void *registry,
                                           const char *pub_endpoint,
                                           const char *router_endpoint);
typedef struct zlink_pollitem_t
{
    void *socket;
    zlink_fd_t fd;
    short events;
    short revents;
} zlink_pollitem_t;
/**
 * @brief Poll for events on a set of sockets and/or file descriptors.
 * @param items_    Array of poll items.
 * @param nitems_   Number of items.
 * @param timeout_  Timeout in milliseconds (-1 = infinite, 0 = immediate).
 * @return Number of items with events, or -1 on failure.
 */
ZLINK_EXPORT int zlink_poll (zlink_pollitem_t *items_, int nitems_, long timeout_);
/** @brief Start a built-in proxy between frontend and backend sockets. */
ZLINK_EXPORT int zlink_proxy (void *frontend_, void *backend_, void *capture_);
/** @brief Start a steerable proxy with an additional control socket. */
ZLINK_EXPORT int zlink_proxy_steerable (void *frontend_,
                                    void *backend_,
                                    void *capture_,
                                    void *control_);
/** @brief Check if the library supports a given capability (e.g. "ipc", "tls"). */
ZLINK_EXPORT int zlink_has (const char *capability_);
/******************************************************************************/
/*  Scheduling timers                                                         */
/******************************************************************************/
typedef void (zlink_timer_fn) (int timer_id, void *arg);
/** @brief Sleep for the given number of seconds. */
ZLINK_EXPORT void zlink_sleep (int seconds_);
typedef void (zlink_thread_fn) (void *);